# rusty-game

./: .gitignore  Cargo.toml  README.md
assets/: character_idle.ase
motion-test/: Cargo.toml  README.md
motion-test/src/: .main.rs.un~  main.rs
rusty-game/: Cargo.toml
rusty-game/src/: anim.rs  graphics.rs  main.rs  myecs.rs
src/: anim.rs  ase.rs  aseprite.rs  build.rs  graphics.rs  main.rs  myecs.rs
