[package]
name = "rustgame"
version = "0.1.0"
authors = ["robrtsql <robrtsql@gmail.com>"]
build = "src/build.rs"

[build-dependencies]
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.6"
os_type="0.5.0"

[dependencies]
ecs = "*"
num-traits = "0.1.36"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.6"

[dependencies.sdl2]
version = "0.29"
default-features = false
features = ["image"]
